[package]
name = "lockpicking"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "default",
    "file_watcher",
    "jpeg",
] }
bevy-inspector-egui = { version = "0.26", features = ["highlight_changes"] }
bevy_kira_audio = { version = "0.20.0", features = ["mp3"] }
rand = "0.8"
simple-easing = "1.0.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
